# udk_app

./: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  models.py  pyproject.toml  settings.py  sound_effects.py  voice_chat.py
docs/: lint_rules.md
prompts/: default.j2  friendly.j2  gamingu.j2  instructions.j2
tests/: __init__.py  test_main.py  test_settings.py  test_sound_effects.py  test_voice_chat.py  test_voice_chat_interface.py
