[project]
name = "udk-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.29.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "openai>=1.78.0",
    "openai-agents>=0.0.14",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "F401",  # Unused imports
    "S104",  # Possible binding to all interfaces (for development)
    "F403",  # Star imports (used in migrations)
    "E501",  # Line too long (handled by formatter)
    "RUF001", # Ambiguous unicode character in string (Japanese text)
    "RUF002", # Ambiguous unicode character in docstring (Japanese text)
    "RUF003", # Ambiguous unicode character in comment (Japanese text)
    "C901",   # Function is too complex (complex business logic)
    "PLR0912", # Too many branches (complex business logic)
    "PLR0915", # Too many statements (complex business logic)
    "TRY301", # Abstract raise to an inner function (would require substantial refactoring)
    "D203",   # One blank line required before class docstring (incompatible with D211)
    "D213",   # Multi-line docstring summary should start at the second line (incompatible with D212)
    "COM812", # Missing trailing comma in collection of items (conflicts with formatter)
    "S101",   # Use of assert detected (needed for pytest)
    "S108",   # Probable insecure usage of temporary file or directory (needed for tests)
    "PLR2004", # Magic value used in comparison (needed for tests)
    "ARG001",  # Unused function argument (needed for fixture dependencies)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Use of assert detected (needed for pytest)
    "S108",   # Probable insecure usage of temporary file or directory (needed for tests)
    "PLR2004", # Magic value used in comparison (needed for tests)
    "ARG001",  # Unused function argument (needed for fixture dependencies)
]
